# cpp-utils

./: .clang-tidy  .gitignore  .isort  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conanfile.py  pyproject.toml
.github/workflows/: build_checks.yml  release.yml
cmake/: cmake-utils.cmake  compiler-utils.cmake
include/dummy/: dummy.hpp
include/enum-utils/: enum-map.hpp  enum-utils.hpp
scripts/: get_project_version.py
src/dummy/: dummy.cpp  main.cpp
tests/: CMakeLists.txt  tests-main.cpp  tests_main.cpp
tests/dummy/: test_dummy.cpp
tests/enum-utils/: test-enum-map.cpp  test-enum-utils.cpp
