CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
PROJECT(cpp-utils VERSION 0.3.0 LANGUAGES CXX)

INCLUDE(GNUInstallDirs)

SET(PROJECT_NAMESPACE ${PROJECT_NAME})
IF (NOT DEFINED CONAN_TOOLCHAIN_PATH)
    SET(CONAN_TOOLCHAIN_PATH ${PROJECT_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/generators/conan_toolchain.cmake)
ENDIF (NOT DEFINED CONAN_TOOLCHAIN_PATH)
MESSAGE(STATUS "CONAN_TOOLCHAIN_PATH: ${CONAN_TOOLCHAIN_PATH}")

SET(CMAKE_MODULE_PATH
    ${PROJECT_SOURCE_DIR}/cmake
    ${CMAKE_MODULE_PATH}
)
INCLUDE(cmake-utils)
INCLUDE(compiler-utils)
INCLUDE(${CONAN_TOOLCHAIN_PATH})

ADD_LIBRARY(enum-utils INTERFACE
            ${PROJECT_SOURCE_DIR}/include/enum-utils/enum-map.hpp
            ${PROJECT_SOURCE_DIR}/include/enum-utils/enum-utils.hpp
)
ADD_LIBRARY(${PROJECT_NAMESPACE}::enum-utils ALIAS enum-utils)
TARGET_INCLUDE_DIRECTORIES(enum-utils INTERFACE
                           $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
                           $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

IF (NOT DISABLE_TESTS)
    FIND_PACKAGE(fmt REQUIRED)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(tests)
ENDIF ()
