[tool.poetry]
name = "cpp-utils"
version = "0.0.1"
description = "N/A"
authors = ["SheyDenis <denis.sheyer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

conan = "~2.8.0"

[tool.poetry.group.dev.dependencies]
isort = "*"
pre-commit = "*"
pylint = "*"
xenon = "*"
yapf = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
